# 8-puzzle

./: README.md  n-puzzle.cabal  n-puzzle.prof
src/: AStar.hs  Board.hs  BoardOptimized.hs  Main.hs  MinPQ.hs  TreeSet.hs  TreeSetBalanced.hs
