name:                n-puzzle
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/n-puzzle#readme
license:             BSD3
license-file:        LICENSE
author:              Anurag Ohri
maintainer:          anuragohri92@gmail.com
copyright:           2016 Author name here
category:            Command Line
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable n-puzzle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, vector
  other-modules:       AStar, BoardOptimized, MinPQ, TreeSetBalanced

